# kwxJulia

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE8_COMPLETE.md  Project.toml  README.md  kwxgen.config.json  plan.md  test_library.jl  test_phase1.jl
.github/: wxffi-architecture.md
demo/: demo.jl
docs/: phase4_reference.md  phase5_reference.md
examples/: README.md  advanced_events.jl  controls_demo.jl  event_handling.jl  hello_world.jl  minimal.jl  minimal_frame.jl  statusbar_demo.jl
src/: WxWidgets.jl
src/core/: constants.jl  events.jl  kwxapp.jl  library.jl  strings.jl  types.jl
src/cpp/: kwxApp.cpp
src/ffi/: app.jl  controls.jl  events.jl  frame.jl  sizers.jl  window.jl
src/widgets/: app.jl  button.jl  checkbox.jl  combobox.jl  events.jl  frame.jl  listbox.jl  sizers.jl  statictext.jl  textctrl.jl  window.jl
test/: README.md  runtests.jl  test_constants.jl  test_phase3.jl  test_phase3_highlevel.jl  test_phase4.jl  test_phase5.jl  test_strings.jl  test_widgets.jl
wx/: KwxFFI_gen.jl  cbantiflickerplugin_gen.jl  cbbardragplugin_gen.jl  cbbarhintsplugin_gen.jl  cbbarinfo_gen.jl  cbbarspy_gen.jl  cbclosebox_gen.jl  cbcollapsebox_gen.jl  cbcommonpaneproperties_gen.jl  cbcustomizebarevent_gen.jl  cbcustomizelayoutevent_gen.jl  cbdiminfo_gen.jl  cbdockbox_gen.jl  cbdockpane_gen.jl  cbdrawbardecorevent_gen.jl  cbdrawbarhandlesevent_gen.jl  cbdrawhintrectevent_gen.jl  cbdrawpanebkgroundevent_gen.jl  cbdrawpanedecorevent_gen.jl  cbdrawrowbkgroundevent_gen.jl  cbdrawrowdecorevent_gen.jl  cbdrawrowhandlesevent_gen.jl  cbdyntoolbardimhandler_gen.jl  cbfinishdrawinareaevent_gen.jl  cbfloatedbarwindow_gen.jl  cbgcupdatesmgr_gen.jl  cbhintanimationplugin_gen.jl  cbinsertbarevent_gen.jl  cblayoutrowevent_gen.jl  cbleftdclickevent_gen.jl  cbleftdownevent_gen.jl  cbleftupevent_gen.jl  cbminibutton_gen.jl  cbmotionevent_gen.jl  cbpanedrawplugin_gen.jl  cbpluginbase_gen.jl  cbpluginevent_gen.jl  cbremovebarevent_gen.jl  cbresizebarevent_gen.jl  cbresizerowevent_gen.jl  (+343 more)
